Fix test execution on Java 11