@@ -131,7 +131,7 @@
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
-                  <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=512m</argLine>
+                  <argLine>-Xms256m -Xmx512m</argLine>
                </configuration>
             </plugin>
             <plugin>
